<?xml version="1.0"?>
<package>
  <name>rrbot_description</name>
  <version>0.0.0</version>
  <description>Pakage for interactive markers with clickability, color change, and movement</description>

  <maintainer email="old@gmail.com">NASA Ames</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/lanseafood/dragonfly</url>

  <author email="lmao.ftwin@gmail.com">Lanssie Minguye Ma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- lanssies for sub and pub -->
  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  
  <run_depend>message_runtime</run_depend>
<!-- end lanssie -->

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
<!-- turtle arm -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
</package>
